fix letter spacing

--- a/src/pages/CaseEditor/components/LeftSideToolbar/LeftSideToolbar.module.scss
+++ b/src/pages/CaseEditor/components/LeftSideToolbar/LeftSideToolbar.module.scss
@@ -183,7 +183,7 @@
                     div {
                         word-break: break-all;
                         cursor: pointer;
-                        letter-spacing: 2px;
+                        // letter-spacing: 2px;
                         font-weight: 700;
     
                         &:hover {
@@ -198,7 +198,7 @@
                     
                     div {
                         word-break: break-all;
-                        letter-spacing: 2px;
+                        // letter-spacing: 2px;
                         font-weight: 700;
                     }
                 }
